@@ -6380,16 +6380,6 @@ Seskupí balíky podle prvního písmena v jejich názvu.
 </varlistentry>
 
 <varlistentry>
-  <term><synopsis>hier</synopsis></term>
-  <listitem><para>
-
-Seskupí balíky podle speciálního souboru, ve kterém je popis
-<quote>hierarchie</quote> balíků.
-
-  </para></listitem>
-</varlistentry>
-
-<varlistentry>
   <term><synopsis>pattern(<replaceable>vzor</replaceable> <optional>=&gt; <replaceable>kategorie</replaceable></optional><optional>, ...</optional>)</synopsis></term>
   <listitem><para>
 
