@@ -7667,17 +7667,6 @@ e: Examine  !: Apply  .: Next  ,: Previous</screen>
 	    </varlistentry>
 
 	    <varlistentry>
-	      <term><synopsis>hier</synopsis></term>
-
-	      <listitem>
-		<para>
-		  Groups packages according to an extra data file
-		  describing a <quote>hierarchy</quote> of packages.
-		</para>
-	      </listitem>
-	    </varlistentry>
-
-	    <varlistentry>
 	      <term><synopsis>pattern(<replaceable>pattern</replaceable> <optional>=> <replaceable>title</replaceable></optional> <optional>{ <replaceable>policy</replaceable> }</optional> <optional>, ...</optional>)</synopsis></term>
 
 	      <listitem>
