@@ -4184,17 +4184,6 @@ tilassa.
 	    </varlistentry>
 
 	    <varlistentry>
-	      <term><synopsis>hier</synopsis></term>
-
-	      <listitem>
-		<para>
-		  Ryhmittelee paketit erillisen pakettihierarkian
-		  kuvaustiedoston mukaan.
-		</para>
-	      </listitem>
-	    </varlistentry>
-
-	    <varlistentry>
 	      <term><synopsis>priority</synopsis></term>
 
 	      <listitem>
