@@ -23,6 +23,13 @@ Version 0.7.2 UNRELEASED
 
   * Change error string of source_policy_parser to be the same as the rest
 
+- Documentation:
+
+  * Guide/User's Manual:
+
+    * Remove grouping policy "hier" from doc/??/aptitude.xml (the
+      categorial/hierarchical browser features were removed in version 0.7)
+
 
 [2015-09-06]
 Version 0.7.1
